Fixed footer sizing between light and dark mode

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1471,6 +1471,7 @@ body.dark-mode {
         background: #A50113;
             .left-section {
                 margin: auto;
+                margin-bottom: (50/16rem);
                 text-align: center;
 
                 .logo {
